force-app/main/default/objects/Renewal__c/fields/RentBankAccountPaster__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountPaster__c</fullName>
    <label>家賃口座貼付担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>