force-app/main/default/objects/Renewal__c/fields/ReplyDueDate__c.field-meta.xml
<CustomField>
    <fullName>ReplyDueDate__c</fullName>
    <label>回答期日</label>
    <type>Date</type>
</CustomField>