force-app/main/default/objects/Renewal__c/fields/ResidentName__c.field-meta.xml
<CustomField>
    <fullName>ResidentName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入居者名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>更新 (社員名)</relationshipLabel>
    <relationshipName>RenewalContactRelation100</relationshipName>
    <type>Lookup</type>
</CustomField>