force-app/main/default/objects/Renewal__c/fields/ResidentNameKana__c.field-meta.xml
<CustomField>
    <fullName>ResidentNameKana__c</fullName>
    <formula>ResidentName__r.Kana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居者名カナ</label>
    <type>Text</type>
</CustomField>