force-app/main/default/objects/Renewal__c/fields/ScrutinyEndDate__c.field-meta.xml
<CustomField>
    <fullName>ScrutinyEndDate__c</fullName>
    <label>精査終了日</label>
    <type>Date</type>
</CustomField>