force-app/main/default/objects/Renewal__c/fields/SeasonVariableCost1__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableCost1__c</fullName>
    <label>季節変動費1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>