force-app/main/default/objects/Renewal__c/fields/SeasonVariableCost3Title__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableCost3Title__c</fullName>
    <label>季節変動費3タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>