force-app/main/default/objects/Renewal__c/fields/SendDocumentColumn__c.field-meta.xml
<CustomField>
    <fullName>SendDocumentColumn__c</fullName>
    <label>送付書類のみ送付書類欄</label>
    <type>TextArea</type>
</CustomField>