force-app/main/default/objects/Renewal__c/fields/SendType__c.field-meta.xml
<CustomField>
    <fullName>SendType__c</fullName>
    <label>送付区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>送付必要</fullName>
            </value>
            <value>
                <fullName>送付不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>