force-app/main/default/objects/Renewal__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>更新時期待ち</fullName>
                <default>true</default>
                <label>更新時期待ち</label>
            </value>
            <value>
                <fullName>条件確認中</fullName>
            </value>
            <value>
                <fullName>内容調整中</fullName>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>対応中（支払・締結等）</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>作業中</fullName>
                <isActive>false</isActive>
                <label>作業中</label>
            </value>
            <value>
                <fullName>経理手配待ち</fullName>
                <isActive>false</isActive>
                <label>経理手配待ち</label>
            </value>
            <value>
                <fullName>請求書待ち</fullName>
                <isActive>false</isActive>
                <label>請求書待ち</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>