force-app/main/default/objects/Renewal__c/fields/SubtotalB__c.field-meta.xml
<CustomField>
    <fullName>SubtotalB__c</fullName>
    <formula>DailyRateRentDifference__c	+	DailyRateCommonChargeDifference__c	+	DailyRateManagementChargeDifference__c	+	DailyRateGarageDifference__c	+	DailyRateOther1Difference__c	+	DailyRateOther2Difference__c</formula>
    <label>小計(Ｂ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>