force-app/main/default/objects/Renewal__c/fields/TestEmailSendDate__c.field-meta.xml
<CustomField>
    <fullName>TestEmailSendDate__c</fullName>
    <label>テストメール送信日</label>
    <type>Date</type>
</CustomField>