force-app/main/default/objects/Renewal__c/fields/TotalExpense__c.field-meta.xml
<CustomField>
    <fullName>TotalExpense__c</fullName>
    <formula>SubtotalA__c + SubtotalB__c + SubtotalC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>更新費用諸費用合計(A+ B + C)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>