force-app/main/default/objects/Renewal__c/fields/UnsendedReconfirmDate__c.field-meta.xml
<CustomField>
    <fullName>UnsendedReconfirmDate__c</fullName>
    <label>送付前再査日</label>
    <type>Date</type>
</CustomField>