force-app/main/default/objects/Renewal__c/validationRules/DailyRateCmChargeDifferenceTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>DailyRateCmChargeDifferenceTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT( ISNULL ( DailyRateCommonChargeDifference__c )) ,
DailyRateCommonChargeDifference__c=0,
ISBLANK( TEXT( DailyRateCmChargeDifferenceTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>DailyRateCmChargeDifferenceTaxCategory__c</errorDisplayField>
    <errorMessage>日割共益差額税区分を入力してください</errorMessage>
</ValidationRule>