force-app/main/default/objects/Renewal__c/validationRules/DailyRateGarageDifferenceTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>DailyRateGarageDifferenceTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL ( DailyRateGarageDifference__c )) ,
DailyRateGarageDifference__c=0,
ISBLANK( TEXT( DailyRateGarageDifferenceTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>DailyRateGarageDifferenceTaxCategory__c</errorDisplayField>
    <errorMessage>日割駐車差額税区分を入力してください</errorMessage>
</ValidationRule>