force-app/main/default/objects/Renewal__c/validationRules/DailyRateMgChargeDifferenceTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>DailyRateMgChargeDifferenceTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL ( DailyRateManagementChargeDifference__c )) ,
DailyRateManagementChargeDifference__c=0,
ISBLANK( TEXT( DailyRateMgChargeDifferenceTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>DailyRateMgChargeDifferenceTaxCategory__c</errorDisplayField>
    <errorMessage>日割管理差額税区分を入力してください</errorMessage>
</ValidationRule>