force-app/main/default/objects/Renewal__c/validationRules/DailyRateRentDifferenceTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>DailyRateRentDifferenceTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL ( DailyRateRentDifference__c )) , 
DailyRateRentDifference__c=0,
ISBLANK( TEXT( DailyRateRentDifferenceTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>DailyRateRentDifferenceTaxCategory__c</errorDisplayField>
    <errorMessage>日割家賃差額税区分を入力してください</errorMessage>
</ValidationRule>