force-app/main/default/objects/Renewal__c/validationRules/DepositDifferenceTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>DepositDifferenceTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( DepositDifference__c )) , 
DepositDifference__c=0,
ISBLANK( TEXT(   DepositDifferenceTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>DepositDifferenceTaxCategory__c</errorDisplayField>
    <errorMessage>敷金差額税区分を入力してください</errorMessage>
</ValidationRule>