force-app/main/default/objects/Renewal__c/validationRules/MonthlyVariableCost1TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>MonthlyVariableCost1TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(  ISBLANK ( MonthlyVariableCost1Title__c )) , ISBLANK( TEXT( MonthlyVariableCost1TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>MonthlyVariableCost1TaxCategory__c</errorDisplayField>
    <errorMessage>月次変動費1税区分を入力してください</errorMessage>
</ValidationRule>