force-app/main/default/objects/Renewal__c/validationRules/NewCommonChargeTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>NewCommonChargeTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(   NewCommonCharge__c   )) , 
ISBLANK( TEXT( NewCommonChargeTaxCategory__c   ) ) )</errorConditionFormula>
    <errorDisplayField>NewCommonChargeTaxCategory__c</errorDisplayField>
    <errorMessage>新共益費税区分を入力してください</errorMessage>
</ValidationRule>