force-app/main/default/objects/Renewal__c/validationRules/NewGarageTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>NewGarageTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT( ISNULL( NewGarage__c )) ,
ISBLANK(TEXT( NewGarageTaxCategory__c) 
)
)</errorConditionFormula>
    <errorDisplayField>NewGarageTaxCategory__c</errorDisplayField>
    <errorMessage>新駐車場課税区分を入力してください。</errorMessage>
</ValidationRule>