force-app/main/default/objects/Renewal__c/validationRules/NewManagementChargeTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>NewManagementChargeTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(    NewManagementCharge__c    )) , 
ISBLANK( TEXT(   NewManagementChargeTaxCategory__c   ) ) )</errorConditionFormula>
    <errorDisplayField>NewManagementChargeTaxCategory__c</errorDisplayField>
    <errorMessage>新管理費税区分を入力してください。</errorMessage>
</ValidationRule>