force-app/main/default/objects/Renewal__c/validationRules/NewOtherAmountTaxCategory1.validationRule-meta.xml
<ValidationRule>
    <fullName>NewOtherAmountTaxCategory1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOther1Amount__c )) , ISBLANK( TEXT(   NewOtherAmountTaxCategory1__c  ) ) )</errorConditionFormula>
    <errorDisplayField>NewOtherAmountTaxCategory1__c</errorDisplayField>
    <errorMessage>新その他1税区分を入力してください</errorMessage>
</ValidationRule>