force-app/main/default/objects/Renewal__c/validationRules/NewOtherAmountTaxCategory2.validationRule-meta.xml
<ValidationRule>
    <fullName>NewOtherAmountTaxCategory2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOther2Amount__c )) , ISBLANK( TEXT(   NewOtherAmountTaxCategory2__c  ) ) )</errorConditionFormula>
    <errorDisplayField>NewOtherAmountTaxCategory2__c</errorDisplayField>
    <errorMessage>新その他2税区分を入力してください</errorMessage>
</ValidationRule>