force-app/main/default/objects/Renewal__c/validationRules/NewOtherAmountTaxCategory3.validationRule-meta.xml
<ValidationRule>
    <fullName>NewOtherAmountTaxCategory3</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOther3Amount__c )) , ISBLANK( TEXT(   NewOtherAmountTaxCategory3__c  ) ) )</errorConditionFormula>
    <errorDisplayField>NewOtherAmountTaxCategory3__c</errorDisplayField>
    <errorMessage>新その他3税区分を入力してください</errorMessage>
</ValidationRule>