force-app/main/default/objects/Renewal__c/validationRules/NewOtherAmountTaxCategory4.validationRule-meta.xml
<ValidationRule>
    <fullName>NewOtherAmountTaxCategory4</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOther4Amount__c )) , ISBLANK( TEXT(   NewOtherAmountTaxCategory4__c  ) ) )</errorConditionFormula>
    <errorDisplayField>NewOtherAmountTaxCategory4__c</errorDisplayField>
    <errorMessage>新その他4税区分を入力してください</errorMessage>
</ValidationRule>