force-app/main/default/objects/Renewal__c/validationRules/NewOtherAmountTaxCategory5.validationRule-meta.xml
<ValidationRule>
    <fullName>NewOtherAmountTaxCategory5</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOther5Amount__c )) , ISBLANK( TEXT(   NewOtherAmountTaxCategory5__c  ) ) )</errorConditionFormula>
    <errorDisplayField>NewOtherAmountTaxCategory5__c</errorDisplayField>
    <errorMessage>新その他5税区分を入力してください</errorMessage>
</ValidationRule>