force-app/main/default/objects/Renewal__c/validationRules/NewOtherAmountTaxCategory6.validationRule-meta.xml
<ValidationRule>
    <fullName>NewOtherAmountTaxCategory6</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOther6Amount__c )) , ISBLANK( TEXT(   NewOtherAmountTaxCategory6__c  ) ) )</errorConditionFormula>
    <errorDisplayField>NewOtherAmountTaxCategory6__c</errorDisplayField>
    <errorMessage>新その他6税区分を入力してください</errorMessage>
</ValidationRule>