force-app/main/default/objects/Renewal__c/validationRules/NewRentTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>NewRentTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewRent__c )) ,
ISBLANK( TEXT(  NewRentTaxCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>NewRentTaxCategory__c</errorDisplayField>
    <errorMessage>新家賃税区分を入力してください。</errorMessage>
</ValidationRule>