force-app/main/default/objects/Renewal__c/validationRules/OtherAmountTaxCategory1.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherAmountTaxCategory1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( Other1Amount__c )) , ISBLANK( TEXT( OtherAmountTaxCategory1__c ) ) )</errorConditionFormula>
    <errorDisplayField>OtherAmountTaxCategory1__c</errorDisplayField>
    <errorMessage>その他1税区分を入力してください</errorMessage>
</ValidationRule>