force-app/main/default/objects/Renewal__c/validationRules/OtherAmountTaxCategory2.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherAmountTaxCategory2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  Other2Amount__c  )) , ISBLANK( TEXT( OtherAmountTaxCategory2__c ) ) )</errorConditionFormula>
    <errorDisplayField>OtherAmountTaxCategory2__c</errorDisplayField>
    <errorMessage>その他2税区分を入力してください</errorMessage>
</ValidationRule>