force-app/main/default/objects/Renewal__c/validationRules/OtherAmountTaxCategory3.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherAmountTaxCategory3</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  Other3Amount__c  )) , ISBLANK( TEXT( OtherAmountTaxCategory3__c ) ) )</errorConditionFormula>
    <errorDisplayField>OtherAmountTaxCategory3__c</errorDisplayField>
    <errorMessage>その他3税区分を入力してください</errorMessage>
</ValidationRule>