force-app/main/default/objects/Renewal__c/validationRules/OtherAmountTaxCategory4.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherAmountTaxCategory4</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  Other4Amount__c  )) , ISBLANK( TEXT( OtherAmountTaxCategory4__c ) ) )</errorConditionFormula>
    <errorDisplayField>OtherAmountTaxCategory4__c</errorDisplayField>
    <errorMessage>その他4税区分を入力してください</errorMessage>
</ValidationRule>