force-app/main/default/objects/Renewal__c/validationRules/OtherAmountTaxCategory5.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherAmountTaxCategory5</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  Other5Amount__c  )) , ISBLANK( TEXT( OtherAmountTaxCategory5__c ) ) )</errorConditionFormula>
    <errorDisplayField>OtherAmountTaxCategory5__c</errorDisplayField>
    <errorMessage>その他5税区分を入力してください</errorMessage>
</ValidationRule>