force-app/main/default/objects/Renewal__c/validationRules/OtherAmountTaxCategory6.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherAmountTaxCategory6</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  Other6Amount__c  )) , ISBLANK( TEXT( OtherAmountTaxCategory6__c ) ) )</errorConditionFormula>
    <errorDisplayField>OtherAmountTaxCategory6__c</errorDisplayField>
    <errorMessage>その他6税区分を入力してください</errorMessage>
</ValidationRule>