force-app/main/default/objects/Renewal__c/validationRules/OtherProcedureExpense1TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherProcedureExpense1TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherProcedureExpense1Amount__c )) , ISBLANK( TEXT(  OtherProcedureExpense1TaxCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherProcedureExpense1TaxCategory__c</errorDisplayField>
    <errorMessage>その他手続き費用1税区分を入力してください</errorMessage>
</ValidationRule>