force-app/main/default/objects/Renewal__c/validationRules/OtherProcedureExpense2TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherProcedureExpense2TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherProcedureExpense2Amount__c )) , ISBLANK( TEXT(  OtherProcedureExpense2TaxCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherProcedureExpense2TaxCategory__c</errorDisplayField>
    <errorMessage>その他手続き費用2税区分を入力してください</errorMessage>
</ValidationRule>