force-app/main/default/objects/Renewal__c/validationRules/OtherProcedureExpense3TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherProcedureExpense3TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherProcedureExpense3Amount__c )) , ISBLANK( TEXT(  OtherProcedureExpense3TaxCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherProcedureExpense3TaxCategory__c</errorDisplayField>
    <errorMessage>その他手続き費用3税区分を入力してください</errorMessage>
</ValidationRule>