force-app/main/default/objects/Renewal__c/validationRules/OtherProcedureExpense4TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherProcedureExpense4TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherProcedureExpense4Amount__c )) , ISBLANK( TEXT(  OtherProcedureExpense4TaxCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherProcedureExpense4TaxCategory__c</errorDisplayField>
    <errorMessage>その他手続き費用4税区分を入力してください</errorMessage>
</ValidationRule>