force-app/main/default/objects/Renewal__c/validationRules/RenewalAdministrativeFeeTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>RenewalAdministrativeFeeTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( ConsumptionTaxCharges__c  )) , ISBLANK( TEXT(    RenewalAdministrativeFeeTaxCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>RenewalAdministrativeFeeTaxCategory__c</errorDisplayField>
    <errorMessage>更新事務手数料税区分を入力してください</errorMessage>
</ValidationRule>