force-app/main/default/objects/Renewal__c/validationRules/RenewalFeeTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>RenewalFeeTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( RenewalFee__c )) , ISBLANK( TEXT( RenewalFeeTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>RenewalFeeTaxCategory__c</errorDisplayField>
    <errorMessage>更新料税区分を入力してください</errorMessage>
</ValidationRule>