force-app/main/default/objects/Renewal__c/validationRules/SeasonVariableCost1TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>SeasonVariableCost1TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( SeasonVariableCost1__c )) , ISBLANK( TEXT( SeasonVariableCost1TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>SeasonVariableCost1TaxCategory__c</errorDisplayField>
    <errorMessage>季節変動費1税区分を入力してください</errorMessage>
</ValidationRule>