force-app/main/default/objects/Renewal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>ResidentName__c</columns>
    <columns>Staff__c</columns>
    <columns>ChargeTeam__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>