force-app/main/default/objects/Renewal__c/listViews/DataManagementQueue_Renewal.listView-meta.xml
<ListView>
    <fullName>DataManagementQueue_Renewal</fullName>
    <filterScope>Queue</filterScope>
    <label>データ管理チーム</label>
    <queue>DataManagementQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>