force-app/main/default/objects/Renewal__c/listViews/ProgressRenewal.listView-meta.xml
<ListView>
    <fullName>ProgressRenewal</fullName>
    <columns>NAME</columns>
    <columns>RealEstateName__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>完了</value>
    </filters>
    <label>進行中の更新手続き(企業社員)</label>
</ListView>