force-app/main/default/objects/Renewal__c/listViews/RenewalQueue_Renewal.listView-meta.xml
<ListView>
    <fullName>RenewalQueue_Renewal</fullName>
    <filterScope>Queue</filterScope>
    <label>更新チーム</label>
    <queue>RenewalQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>