force-app/main/default/objects/Renewal__c/listViews/RenewalRequestStaffCompleted.listView-meta.xml
<ListView>
    <fullName>RenewalRequestStaffCompleted</fullName>
    <columns>NAME</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>ReconfirmDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReconfirmRequestTeam__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ReconfirmDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>DecisionApplicationDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>再査担当リストビュー(完了)</label>
</ListView>