force-app/main/default/objects/Renewal__c/listViews/RenewalRequestTeamProgression.listView-meta.xml
<ListView>
    <fullName>RenewalRequestTeamProgression</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>ReconfirmDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReconfirmRequestTeam__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ReconfirmDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>DecisionApplicationDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>再査担当チームリストビュー(進行中)</label>
</ListView>