force-app/main/default/objects/Renewal__c/listViews/TermsConfirmDocumentUnsent.listView-meta.xml
<ListView>
    <fullName>TermsConfirmDocumentUnsent</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Account__c</columns>
    <columns>RealEstate__c</columns>
    <columns>RenewalCounter__c</columns>
    <columns>RenewalCounterCharge__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TermsConfirmDocumentSendDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>条件確認書未送付</label>
</ListView>